# pycvatxml

./: README.md  pyproject.toml
.github/workflows/: mypy.yml  publish.yml  pytest.yml
src/pycvatxml/: Annotation.py  CvatXml.py  Image.py  MetaData.py  __init__.py
tests/: test_loading.py
tests/testdata/: annotations.xml
